manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: password-checker
  namespace: triangular
spec:
  selector:
    matchLabels:
      app: password-checker
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: password-checker
    spec:
      containers:
        - name: password-checker-example-app
          image: registry.akehir.com:443/triangular/password-checker/password-checker-example-app:develop-f31fbb9d-1768771636 # {"$imagepolicy": "triangular:password-checker-example-app-image-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8811
      imagePullSecrets:
        - name: deploy-triangular
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - arm64
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: module
                    operator: In
                    values:
                      - password-checker
              topologyKey: "kubernetes.io/hostname"
