manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: password-checker
  namespace: password-checker
spec:
  selector:
    app: password-checker
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8811
