manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: password-checker-ingress
  namespace: password-checker
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: password-checker.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: password-checker
                port:
                  number: 8001
  tls:
    - hosts:
      - password.akehir.com
      secretName: password-akehir-com
